fix login url and enable odl auto load when karaf start